# ldndctools

./: .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  DLSC.py  DLSC_v01.py  Dockerfile  MANIFEST.in  Makefile  NLCC.py  NLCC_split4db.py  NLCC_v01.py  Pipfile  README.md  _version.py  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sites_LR.xml  sites_LR_mask.nc  split4db.py  versioneer.py
.github/workflows/: base-ci.yml  ci.yml  tests.yaml
data/: catalog.yml  ldndctools.conf
data/misc/: elevation_025deg.nc  elevation_05deg.nc
data/soil/: GLOBAL_WISESOIL_S1_HR.nc.REMOVED.git-id
data/tmworld/: tmworld_HR.nc  tmworld_MR.nc  tmworld_subregions_lut.txt
ldndctools/: __init__.py  _version.py  app.py  cdgen.py  cli.py  dlsc-gui.py  dlsc.py  extra.py  nlcc.py  nlcc_split4db.py  regions.py
ldndctools/cli/: checkbox_custom.py  cli.py  selector.py
ldndctools/gui/: download_button.py  page1.py  utils.py
ldndctools/io/: ncwriter.py  xmlwriter.py  zipwriter.py
ldndctools/md/: instructions.md
ldndctools/misc/: __init__.py  calculations.py  create_data.py  (+6 more)
nbs/: create_isric_wise_grids2.ipynb  create_tmworld_grids.ipynb
soil/: GLOBAL_WISESOIL_D1_HR.nc.REMOVED.git-id  GLOBAL_WISESOIL_D1_LR.nc.REMOVED.git-id
tests/: conftest.py  test_sitexmlwriter.py  test_translate_data_format.py
tmworld/: tmworld_LR.nc  tmworld_region_HR.nc.REMOVED.git-id  tmworld_region_LR.nc  tmworld_subregion_HR.nc.REMOVED.git-id  tmworld_subregion_LR.nc  tmworld_un_HR.nc.REMOVED.git-id  tmworld_un_LR.nc  tmworldtable.xls
(+15 files in other folders)
