[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = ldndctools/_version.py
versionfile_build = ldndctools/_version.py
tag_prefix =
parentdir_prefix = ldndctools-

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    versioneer.py
    ldndctools/_version.py
